--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
 <style>
   :root { color-scheme: light; --brand:#2563eb; --ok:#16a34a; --err:#b91c1c; }
 
-  /* ==== 背景設定 ==== */
+  /* ===== 全頁小 Pony 圖案平鋪背景 ===== */
+  html, body { margin:0; padding:0; height:100%; }
   body{
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-    margin:24px;
     background-color:#fafafa;
     background-image:url('https://i.postimg.cc/jSmGH445/Pony.png');
-    background-repeat:repeat-y;
-    background-size:100% auto;
-    background-position:top center;
+    background-repeat:repeat;      /* 水平 + 垂直都重複 */
+    background-size:auto;          /* 使用原圖尺寸，不縮放 */
+    background-position:top left;  /* 從左上開始平鋪 */
     color:#111;
   }
 
   h1{font-size:clamp(26px,3.8vw,36px);margin:0 0 10px}
   .muted{color:#6b7280}
-  .wrap{display:grid;gap:18px;max-width:980px;margin:auto}
+  .wrap{display:grid;gap:18px;max-width:980px;margin:auto;padding:24px}
   .card{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:18px;box-shadow:0 1px 2px rgba(0,0,0,.03)}
   label{font-weight:600;display:block;margin:.5rem 0 .35rem}
   input[type="text"],input[type="email"],input[type="file"]{width:100%;padding:.6rem .7rem;border:1px solid #d1d5db;border-radius:8px;font-size:16px;background:#fff}
+  textarea{width:100%;padding:.6rem .7rem;border:1px solid #d1d5db;border-radius:8px;font-size:16px;background:#fff}
   .row{display:grid;grid-template-columns:1fr 1fr;gap:14px}
+  @media (max-width:720px){ .row{ grid-template-columns:1fr } }
   .checkbox{display:flex;gap:.55rem;align-items:flex-start;margin-top:.75rem}
   .checkbox input{margin-top:4px}
   .note{font-size:13px;color:#6b7280}
@@ -39,7 +41,7 @@
   .counter{font-weight:700}
   .gallery{display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:12px;margin-top:10px}
   .thumb{background:#fff;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden}
-  .thumb img{display:block;width:100%;height:140px;object-fit:cover}
+  .thumb img{display:block;width:100%;height:140px;object-fit:cover;background:#f3f4f6}
   .thumb .cap{padding:8px;font-size:13px;color:#374151;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
   .hl{background:#ffec99;transition:background .9s}
 </style>
@@ -72,6 +74,9 @@
         <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required />
         <div class="note">File size must be between <b>1 MB</b> and <b>5 MB</b>. Recommended: <b>150–300 ppi</b> (Letter size scan typically &gt; 1 MB).</div>
 
+        <label for="desc">Description (optional)</label>
+        <textarea id="desc" rows="3" placeholder="Tell us about your pony…"></textarea>
+
         <div class="checkbox">
           <input id="consent" name="consent" type="checkbox" required />
           <label for="consent" class="muted" style="margin:0;font-weight:500">
@@ -95,17 +100,20 @@
   </div>
 
 <script>
+  // 你的 Web App /exec URL
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyS8EeAEoACk6HqauFS1y44kI7j20xmuTmIJPucYmtnCBBBSiQu_uSZ8vJGftIaHueFvA/exec';
+
   const $ = id => document.getElementById(id);
   const totalEl = $('total'), statusEl = $('status'), btn = $('submitBtn');
-  const MIN = 1 * 1024 * 1024;          
-  const MAX = 5 * 1024 * 1024;          
+
+  const MIN = 1 * 1024 * 1024;   // 1 MB
+  const MAX = 5 * 1024 * 1024;   // 5 MB
   const GALLERY_LIMIT = 24;
 
   function setBusy(on){
     if (on){
       btn.setAttribute('disabled','disabled');
-      btn.innerHTML = '<span class="spinner" role="progressbar"></span><span>Uploading…</span>';
+      btn.innerHTML = '<span class="spinner" role="progressbar" aria-label="Uploading"></span><span>Uploading…</span>';
     } else {
       btn.removeAttribute('disabled');
       btn.innerHTML = '<span class="txt">Upload</span>';
@@ -131,6 +139,7 @@
       const j = await r.json();
       const box = $('gallery');
       if (!j.ok || !Array.isArray(j.items)){ box.innerHTML = '<div class="muted">No items yet.</div>'; return; }
+      // 只顯示圖片類型
       const imgs = j.items.filter(it => (it.mimeType||'').startsWith('image/'));
       if (!imgs.length){ box.innerHTML = '<div class="muted">No images yet.</div>'; return; }
       box.innerHTML = imgs.map(it => {
@@ -146,6 +155,7 @@
       }).join('');
     }catch(e){
       $('gallery').innerHTML = '<div class="muted">Failed to load gallery.</div>';
+      console.error(e);
     }
   }
 
@@ -167,8 +177,9 @@
     fd.append('name', data.name);
     fd.append('email', data.email);
     fd.append('title', data.title);
+    fd.append('description', data.desc || '');
     fd.append('consent', data.consent ? 'true' : 'false');
-    fd.append('file', data.file, data.file.name);
+    fd.append('file', data.file, data.file.name); // 關鍵：name="file"
     const r = await fetch(SCRIPT_URL, { method:'POST', body: fd });
     return r.json();
   }
@@ -179,6 +190,7 @@
     fd.append('name', data.name);
     fd.append('email', data.email);
     fd.append('title', data.title);
+    fd.append('description', data.desc || '');
     fd.append('consent', data.consent ? 'true' : 'false');
     fd.append('filebase64', b64);
     fd.append('mimetype', data.file.type || 'application/octet-stream');
@@ -190,11 +202,14 @@
   $('ponyForm').addEventListener('submit', async (e)=>{
     e.preventDefault();
     statusEl.textContent = '';
+
     const name = $('name').value.trim();
     const email = $('email').value.trim();
     const title = $('title').value.trim();
+    const desc  = $('desc').value.trim();
     const consent = $('consent').checked;
     const file = $('file').files[0];
+
     if (!name || !email || !title || !consent || !file){
       err('Please complete all required fields and consent.');
       return;
@@ -203,12 +218,16 @@
       err('File must be between 1 MB and 5 MB.');
       return;
     }
+
     setBusy(true);
     try{
-      let res = await uploadMultipart({name,email,title,consent,file});
+      // 先試 multipart
+      let res = await uploadMultipart({name,email,title,desc,consent,file});
       if (!res.ok && String(res.error||'').toLowerCase().includes('no file uploaded')){
-        res = await uploadBase64({name,email,title,consent,file});
+        // 再走 base64 備援
+        res = await uploadBase64({name,email,title,desc,consent,file});
       }
+
       if (res.ok){
         const link = res.fileUrl ? ` <a href="${res.fileUrl}" target="_blank" rel="noopener">Open</a>` : '';
         ok('Upload successful!' + link);
@@ -216,15 +235,18 @@
         await refreshTotal();
         await refreshGallery();
       } else {
-        err('Upload failed: ' + (res.error || 'Unknown error'));
+        const diag = res.diag ? `<pre class="note" style="white-space:pre-wrap;margin-top:6px">${JSON.stringify(res.diag,null,2)}</pre>` : '';
+        err('Upload failed: ' + (res.error || 'Unknown error') + diag);
       }
     }catch(ex){
       err(ex.message || 'Network error');
+      console.error(ex);
     }finally{
       setBusy(false);
     }
   });
 
+  // 初始載入
   refreshTotal();
   refreshGallery();
 </script>
