--- a/index.html
+++ b/index.html
@@ -1,237 +1,269 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Fancy Pony — Artwork Submission</title>
 <style>
-  :root { color-scheme: light; --brand:#2563eb; --ok:#16a34a; --err:#b91c1c; }
-  html, body { margin:0; padding:0; height:100%; }
+  :root { color-scheme: light; }
   body{
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-    background:#fafafa url('https://i.postimg.cc/jSmGH445/Pony.png') repeat top left;
-    color:#111;
+    font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+    margin:0; padding:0;
+    background-image:url('https://i.postimg.cc/jSmGH445/Pony.png');
+    background-repeat: repeat;
+    background-size: 260px auto; /* 小圖反覆鋪滿 */
   }
-  h1{font-size:clamp(26px,3.8vw,36px);margin:0 0 10px}
-  .muted{color:#6b7280}
-  .wrap{display:grid;gap:18px;max-width:980px;margin:auto;padding:24px}
-  /* 表單卡片縮小為 70% 寬 */
-  .formShell{width:70%; min-width:320px; margin:auto}
-  .card{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:18px;box-shadow:0 1px 2px rgba(0,0,0,.03)}
-  label{font-weight:600;display:block;margin:.5rem 0 .35rem}
+  .wrap{ max-width: 860px; margin: 28px auto; padding: 0 16px; }
+  h1{ margin:0 0 8px; }
+  .count{ color:#374151; margin:0 0 16px; }
+
+  .card{
+    background:#fff; border-radius:12px;
+    box-shadow:0 6px 24px rgba(0,0,0,.08);
+    border:1px solid rgba(0,0,0,.06);
+    padding:16px;
+  }
+
+  .field{ margin:12px 0; }
+  label{ display:block; font-weight:600; margin-bottom:6px; }
   input[type="text"],input[type="email"],input[type="file"],textarea{
-    width:100%;padding:.6rem .7rem;border:1px solid #d1d5db;border-radius:8px;font-size:16px;background:#fff}
-  textarea{resize:vertical}
-  /* 名稱/Email 改為上下排列 */
-  .row{display:grid;grid-template-columns:1fr;gap:14px}
-  .checkbox{display:flex;gap:.55rem;align-items:flex-start;margin-top:.75rem}
-  .checkbox input{margin-top:4px}
-  .note{font-size:13px;color:#6b7280}
-  .btn{display:inline-flex;gap:.5rem;align-items:center;margin-top:14px;padding:.7rem 1.1rem;border-radius:10px;border:1px solid #1f55c3;background:var(--brand);color:#fff;font-weight:700;cursor:pointer}
-  .btn[disabled]{opacity:.55;cursor:not-allowed}
-  .spinner{width:16px;height:16px;border:2px solid #ffffff80;border-top-color:#fff;border-radius:50%;animation:spin .8s linear infinite}
-  @keyframes spin{to{transform:rotate(1turn)}}
-  .status{min-height:22px;margin-top:10px}
-  .ok{background:#f0fff4;border:1px solid #c8f5d3;color:#065f46;border-radius:8px;padding:8px 10px;display:inline-block}
-  .err{background:#fff1f2;border:1px solid #fecaca;color:#991b1b;border-radius:8px;padding:8px 10px;display:inline-block}
-  .counter{font-weight:700}
-  .gallery{display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:12px;margin-top:10px}
-  .thumb{background:#fff;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden}
-  .thumb img{display:block;width:100%;height:140px;object-fit:cover;background:#f3f4f6}
-  .thumb .cap{padding:8px;font-size:13px;color:#374151;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-  .hl{background:#ffec99;transition:background .9s}
+    width:100%; box-sizing:border-box;
+    border:1px solid #d1d5db; border-radius:8px;
+    padding:10px 12px; font-size:15px; background:#fff;
+  }
+  textarea{ resize:vertical; min-height:90px; }
+
+  .hint{ font-size:13px; color:#6b7280; margin-top:6px; }
+
+  .consent{ display:flex; gap:10px; align-items:flex-start; margin:12px 0; }
+  .consent input{ margin-top:3px; }
+
+  .actions{ margin-top:12px; display:flex; gap:10px; align-items:center; }
+  button{
+    background:#2563eb; color:#fff; border:0; border-radius:10px;
+    padding:10px 18px; font-weight:700; cursor:pointer;
+    box-shadow:0 8px 22px rgba(37,99,235,.25);
+    transition:transform .05s ease, box-shadow .2s ease, opacity .2s ease;
+  }
+  button:hover{ transform:translateY(-1px) scale(1.01); box-shadow:0 12px 30px rgba(37,99,235,.28); }
+  button:active{ transform:translateY(0) scale(.99); }
+  button[disabled]{ opacity:.6; cursor:not-allowed; transform:none; box-shadow:none; }
+
+  .msg{ margin-top:10px; }
+  .ok{ color:#065f46; background:#ecfdf5; border:1px solid #a7f3d0; border-radius:8px; padding:8px 10px; display:inline-block; }
+  .err{ color:#991b1b; background:#fef2f2; border:1px solid #fecaca; border-radius:8px; padding:8px 10px; display:inline-block; }
+
+  /* Gallery */
+  .gallery{ margin:24px 0; display:grid; grid-template-columns: repeat(auto-fill,minmax(180px,1fr)); gap:14px; }
+  .tile{
+    background:#fff; border-radius:12px; overflow:hidden;
+    border:1px solid rgba(0,0,0,.06); box-shadow:0 6px 20px rgba(0,0,0,.07);
+  }
+  .tile img{ width:100%; height:180px; object-fit:cover; display:block; background:#f3f4f6; }
+  .tile .meta{ padding:8px 10px; font-size:13px; color:#374151; }
+  .tile .meta b{ display:block; }
+
+  .sr{ position:absolute; left:-9999px; }
 </style>
 </head>
 <body>
   <div class="wrap">
+    <h1>Fancy Pony — Artwork Submission</h1>
+    <p class="count">Total drawings collected: <span id="count">–</span></p>
 
-    <header class="formShell">
-      <h1>Fancy Pony — Artwork Submission</h1>
-      <div class="muted">Total drawings collected: <span id="total" class="counter">Loading…</span></div>
-    </header>
+    <div class="card" id="formCard">
+      <div class="field">
+        <label for="name">Your Name *</label>
+        <input id="name" type="text" autocomplete="name" required>
+      </div>
 
-    <section class="card formShell" id="formCard">
-      <form id="ponyForm" novalidate>
-        <div class="row">
-          <div>
-            <label for="name">Your Name *</label>
-            <input id="name" name="name" type="text" required />
-          </div>
-          <div>
-            <label for="email">Your Email *</label>
-            <input id="email" name="email" type="email" required />
-          </div>
-        </div>
+      <div class="field">
+        <label for="email">Your Email *</label>
+        <input id="email" type="email" autocomplete="email" required>
+      </div>
 
+      <div class="field">
         <label for="title">Pony Name *</label>
-        <input id="title" name="title" type="text" required />
+        <input id="title" type="text" required>
+      </div>
 
+      <div class="field">
         <label for="file">Upload File *</label>
-        <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required />
-        <div class="note">File size must be between <b>1 MB</b> and <b>5 MB</b>. Recommended: <b>150–300 ppi</b> (Letter size scan typically &gt; 1 MB).</div>
+        <input id="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required>
+        <div class="hint">File size must be between <b>1 MB</b> and <b>5 MB</b>. Recommended: <b>150–300 ppi</b> (Letter size scan typically &gt; 1 MB).</div>
+      </div>
 
+      <div class="field">
         <label for="desc">Description (optional)</label>
-        <textarea id="desc" rows="3" placeholder="Tell us about your pony…"></textarea>
+        <textarea id="desc" placeholder="Tell us about your pony…"></textarea>
+      </div>
 
-        <div class="checkbox">
-          <input id="consent" name="consent" type="checkbox" required />
-          <label for="consent" class="muted" style="margin:0;font-weight:500">
-            I agree to grant the school marketing rights to print, publicly display, and use my artwork for creative purposes.
-          </label>
-        </div>
+      <div class="consent">
+        <input id="consent" type="checkbox" required>
+        <label for="consent">I agree to grant the school marketing rights to print, publicly display, and use my artwork for creative purposes.</label>
+      </div>
 
-        <button id="submitBtn" class="btn" type="submit">
-          <span class="txt">Upload</span>
-        </button>
+      <div class="actions">
+        <button id="submitBtn">Upload</button>
+        <span id="spinner" class="hint" aria-live="polite"></span>
+      </div>
+      <div id="status" class="msg" aria-live="polite"></div>
+    </div>
 
-        <div id="status" class="status" aria-live="polite"></div>
-      </form>
-    </section>
-
-    <section class="card formShell" id="galleryCard">
-      <h2 style="margin:0 0 8px">Gallery</h2>
-      <div id="gallery" class="gallery" aria-live="polite"></div>
-    </section>
-
+    <h2 style="margin:22px 0 8px;">Gallery</h2>
+    <div id="gallery" class="gallery" aria-live="polite"></div>
   </div>
 
 <script>
+  // 你的最新 Web App /exec
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyS8EeAEoACk6HqauFS1y44kI7j20xmuTmIJPucYmtnCBBBSiQu_uSZ8vJGftIaHueFvA/exec';
 
   const $ = id => document.getElementById(id);
-  const totalEl = $('total'), statusEl = $('status'), btn = $('submitBtn');
-  const MIN = 1 * 1024 * 1024, MAX = 5 * 1024 * 1024, GALLERY_LIMIT = 24;
 
-  const bust = url => url ? url + (url.includes('?') ? '&' : '?') + 't=' + Date.now() : '';
-
-  function setBusy(on){
-    if (on){
-      btn.setAttribute('disabled','disabled');
-      btn.innerHTML = '<span class="spinner" role="progressbar" aria-label="Uploading"></span><span>Uploading…</span>';
-    } else {
-      btn.removeAttribute('disabled');
-      btn.innerHTML = '<span class="txt">Upload</span>';
+  function toDirect(urlOrId){
+    // 已經是 uc 直接連結
+    if (typeof urlOrId === 'string' && urlOrId.startsWith('https://drive.google.com/uc')) return urlOrId;
+    // fileId → 直接連結
+    if (urlOrId && !String(urlOrId).includes('http')) {
+      return 'https://drive.google.com/uc?export=view&id=' + urlOrId;
     }
+    // …/file/d/xxx/view -> uc?export=view&id=xxx
+    if (typeof urlOrId === 'string') {
+      const m = urlOrId.match(/\/d\/([^/]+)/);
+      if (m) return 'https://drive.google.com/uc?export=view&id=' + m[1];
+    }
+    return '';
   }
-  function ok(msg){ statusEl.innerHTML = `<span class="ok">${msg}</span>`; }
-  function err(msg){ statusEl.innerHTML = `<span class="err">${msg}</span>`; }
 
-  async function refreshTotal(){
+  async function refreshCount(){
     try{
       const r = await fetch(SCRIPT_URL + '?action=count', {cache:'no-store'});
       const j = await r.json();
-      if (j.ok){ totalEl.textContent = j.count ?? 0; totalEl.classList.add('hl'); setTimeout(()=>totalEl.classList.remove('hl'), 900); }
-      else totalEl.textContent = 'Error';
-    }catch{ totalEl.textContent = 'Error'; }
+      $('count').textContent = j.ok ? (j.count ?? 0) : '–';
+    }catch{ $('count').textContent = '–'; }
   }
 
-  // 先取試算表；沒有的話 fallback 取 Drive 資料夾
-  async function refreshGallery(scrollInto=false){
+  async function loadGallery(){
     const box = $('gallery');
-    async function render(items){
-      if (!items || !items.length){ box.innerHTML = '<div class="muted">No items yet.</div>'; return; }
-      box.innerHTML = items.map(it => {
-        const cap = `${(it.title||'Untitled')} by ${(it.name||'Anonymous')}`;
-        const url = bust(it.fileUrl || '');
-        return `
-          <figure class="thumb">
-            <a href="${url}" target="_blank" rel="noopener">
-              <img src="${url}" alt="${cap}">
-            </a>
-            <figcaption class="cap" title="${cap}">${cap}</figcaption>
-          </figure>`;
-      }).join('');
-      if (scrollInto) document.getElementById('galleryCard').scrollIntoView({behavior:'smooth', block:'start'});
-    }
+    box.innerHTML = '';
     try{
-      const r = await fetch(SCRIPT_URL + '?action=list&limit=' + GALLERY_LIMIT, {cache:'no-store'});
+      const r = await fetch(SCRIPT_URL + '?action=gallery', {cache:'no-store'});
       const j = await r.json();
-      if (j.ok && Array.isArray(j.items) && j.items.length){
-        const imgs = j.items.filter(x => (x.mimeType||'').startsWith('image/'));
-        return render(imgs);
+      if (!j.ok || !j.items || j.items.length === 0){
+        box.innerHTML = '<div class="hint">No items yet.</div>';
+        return;
       }
-      // fallback：直接向後端要 drive_list
-      const r2 = await fetch(SCRIPT_URL + '?action=drive_list&limit=' + GALLERY_LIMIT, {cache:'no-store'});
-      const j2 = await r2.json();
-      if (j2.ok && Array.isArray(j2.items)) return render(j2.items);
-      box.innerHTML = '<div class="muted">No items yet.</div>';
-    }catch(e){
-      box.innerHTML = '<div class="muted">Failed to load gallery.</div>';
-      console.error(e);
+      for (const it of j.items){
+        const src = it.directUrl || toDirect(it.fileUrl) || toDirect(it.fileId);
+        const title = (it.title || '').toString().trim();
+        const name  = (it.name  || '').toString().trim();
+        const tile  = document.createElement('div');
+        tile.className = 'tile';
+        tile.innerHTML = `
+          <img src="${src}" alt="${title ? title : 'Pony'} by ${name ? name : 'unknown'}" loading="lazy">
+          <div class="meta">
+            <b>${title || 'Untitled'}</b>
+            <div>${name || ''}</div>
+          </div>`;
+        box.appendChild(tile);
+      }
+    }catch(err){
+      box.innerHTML = '<div class="hint">Unable to load gallery.</div>';
+      console.error(err);
     }
   }
 
-  function toBase64(file){
+  function fileToBase64(file){
     return new Promise((resolve,reject)=>{
-      const fr = new FileReader();
-      fr.onload = () => { const s = String(fr.result||''), i = s.indexOf('base64,'); resolve(i>=0 ? s.slice(i+7) : s); };
-      fr.onerror = () => reject(fr.error || new Error('File read error'));
+      const fr=new FileReader();
+      fr.onload=()=> {
+        const s=String(fr.result||'');
+        const i=s.indexOf('base64,');
+        resolve(i>=0 ? s.slice(i+7) : s);
+      };
+      fr.onerror=()=>reject(fr.error||new Error('read error'));
       fr.readAsDataURL(file);
     });
   }
 
-  async function uploadMultipart(data){
-    const fd = new FormData();
-    fd.append('name', data.name);
-    fd.append('email', data.email);
-    fd.append('title', data.title);
-    fd.append('description', data.desc || '');
-    fd.append('consent', data.consent ? 'true' : 'false');
-    fd.append('file', data.file, data.file.name); // 關鍵
-    const r = await fetch(SCRIPT_URL, { method:'POST', body: fd });
-    return r.json();
-  }
-  async function uploadBase64(data){
-    const b64 = await toBase64(data.file);
-    const fd = new FormData();
-    fd.append('name', data.name);
-    fd.append('email', data.email);
-    fd.append('title', data.title);
-    fd.append('description', data.desc || '');
-    fd.append('consent', data.consent ? 'true' : 'false');
-    fd.append('filebase64', b64);
-    fd.append('mimetype', data.file.type || 'application/octet-stream');
-    fd.append('filename', data.file.name || 'upload.bin');
-    const r = await fetch(SCRIPT_URL, { method:'POST', body: fd });
-    return r.json();
-  }
+  $('submitBtn').addEventListener('click', async () =>{
+    const status  = $('status');
+    const spinner = $('spinner');
+    const btn     = $('submitBtn');
 
-  $('ponyForm').addEventListener('submit', async (e)=>{
-    e.preventDefault();
-    statusEl.textContent = '';
-
-    const name = $('name').value.trim();
+    status.textContent = '';
+    const name  = $('name').value.trim();
     const email = $('email').value.trim();
     const title = $('title').value.trim();
-    const desc  = $('desc').value.trim();
+    const file  = $('file').files[0];
     const consent = $('consent').checked;
-    const file = $('file').files[0];
 
-    if (!name || !email || !title || !consent || !file){ err('Please complete all required fields and consent.'); return; }
-    if (file.size < MIN || file.size > MAX){ err('File must be between 1 MB and 5 MB.'); return; }
+    if (!name || !email || !title || !file || !consent){
+      status.innerHTML = '<span class="err">Please complete all required fields.</span>';
+      return;
+    }
+    if (file.size < 1*1024*1024 || file.size > 5*1024*1024){
+      status.innerHTML = '<span class="err">File must be between 1 MB and 5 MB.</span>';
+      return;
+    }
 
-    setBusy(true);
     try{
-      let res = await uploadMultipart({name,email,title,desc,consent,file});
-      if (!res.ok && String(res.error||'').toLowerCase().includes('no file uploaded')){
-        res = await uploadBase64({name,email,title,desc,consent,file});
+      btn.disabled = true;
+      spinner.textContent = 'Uploading…';
+      // 先試 multipart（最佳）
+      const fd = new FormData();
+      fd.append('name', name);
+      fd.append('email', email);
+      fd.append('title', title);
+      fd.append('consent', 'true');
+      fd.append('file', file, file.name);
+
+      let res = await fetch(SCRIPT_URL, { method:'POST', body: fd });
+      let txt = await res.text();
+
+      // 如果託管環境剝掉檔案，fallback base64
+      let data;
+      try { data = JSON.parse(txt); } catch { data = {ok:false}; }
+      if (!data.ok && /No file uploaded/i.test(data.error||'')){
+        const b64 = await fileToBase64(file);
+        const fd2 = new FormData();
+        fd2.append('name', name);
+        fd2.append('email', email);
+        fd2.append('title', title);
+        fd2.append('consent', 'true');
+        fd2.append('filebase64', b64);
+        fd2.append('mimetype', file.type || 'application/octet-stream');
+        fd2.append('filename', file.name || 'upload.bin');
+        res = await fetch(SCRIPT_URL, { method:'POST', body: fd2 });
+        txt = await res.text();
+        data = JSON.parse(txt);
       }
-      if (res.ok){
-        ok(`Upload successful! ${res.fileUrl ? `<a href="${res.fileUrl}" target="_blank" rel="noopener">Open</a>` : ''}`);
-        e.target.reset();
-        await refreshTotal();
-        await refreshGallery(true);
+
+      if (data.ok){
+        status.innerHTML = '<span class="ok">Upload successful!</span>';
+        // 立刻刷新數量 & 圖庫
+        await refreshCount();
+        await loadGallery();
+        // 清表單
+        $('file').value = '';
+        // 滾到 Gallery 讓他看到
+        document.getElementById('gallery').scrollIntoView({behavior:'smooth', block:'start'});
       }else{
-        const diag = res.diag ? `<pre class="note" style="white-space:pre-wrap;margin-top:6px">${JSON.stringify(res.diag,null,2)}</pre>` : '';
-        err('Upload failed: ' + (res.error || 'Unknown error') + diag);
+        status.innerHTML = '<span class="err">Upload failed: ' + (data.error || 'Unknown error') + '</span>';
+        console.warn('server diag:', data.diag);
       }
-    }catch(ex){
-      err(ex.message || 'Network error'); console.error(ex);
-    }finally{ setBusy(false); }
+    }catch(err){
+      console.error(err);
+      status.innerHTML = '<span class="err">Error: ' + err.message + '</span>';
+    }finally{
+      btn.disabled = false;
+      spinner.textContent = '';
+    }
   });
 
-  refreshTotal();
-  refreshGallery();
+  // init
+  refreshCount();
+  loadGallery();
 </script>
 </body>
 </html>
